[metadata]
name = apic-icehouse
version = 1.0.0
summary = Neutron Apic ML2 driver for Openstack Icehouse
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    apic_ml2
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/cisco-apic.filters
    etc/neutron/plugins/ml2 =
	etc/neutron/plugins/ml2/ml2_conf_cisco_apic.ini

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = apic-ml2-driver/locale
domain = apic-ml2-driver

[update_catalog]
domain = apic-ml2-driver
output_dir = apic-ml2-driver/locale
input_file = apic-ml2-driver/locale/apic-ml2-driver.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = apic-ml2-driver/locale/apic-ml2-driver.pot

[entry_points]
console_scripts =
    apic-ml2-db-manage = apic_ml2.neutron.db.migration.cli:main
    neutron-cisco-apic-service-agent = apic_ml2.neutron.plugins.ml2.drivers.cisco.apic.apic_topology:service_main
    neutron-cisco-apic-host-agent = apic_ml2.neutron.plugins.ml2.drivers.cisco.apic.apic_topology:agent_main

neutron.ml2.mechanism_drivers =
    cisco_apic = apic_ml2.neutron.plugins.ml2.drivers.cisco.apic.mechanism_apic:APICMechanismDriver
