[metadata]
name = apic-juno
version = 1.0.0
summary = Neutron Apic ML2 driver for Openstack Juno
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    apic_ml2
data_files =
    etc/neutron/rootwrap.d =
        etc/neutron/rootwrap.d/cisco-apic.filters
    etc/neutron/plugins/ml2 =
	etc/neutron/plugins/ml2/ml2_conf_cisco_apic.ini

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = neutron/locale
domain = neutron

[update_catalog]
domain = neutron
output_dir = neutron/locale
input_file = neutron/locale/neutron.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron/locale/neutron.pot

[entry_points]

neutron.ml2.mechanism_drivers =
    cisco_apic_juno = apic_ml2.neutron.plugins.ml2.drivers.cisco.apic.mechanism_apic:APICMechanismDriver
